--- a/src/styles/home.module.css
+++ b/src/styles/home.module.css
@@ -35,4 +35,40 @@ body{
     color: #fff;
     text-align: center;
     line-height: 140%;
+    margin: 100px 0;
+}
+
+.Containerbox{
+    gap: 10px;
+    display: flex;
+    max-width: 1024px;
+}
+
+.box{
+    width: 130px;
+    max-width: 130px;
+    background-color: #fafafa;
+    padding: 12px 40px;
+    border-radius: 5px;
+    transition: .5s linear;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: 100px 0;
+}
+
+.box:hover{
+    transform: scale(1.05);
+    cursor: pointer;
+}
+
+@media (max-width: 768px){
+    .container{
+        width: 100vw;
+        height: 100vh;
+        display: flex;
+        align-items: center;
+        flex-direction: column;
+        justify-content: space-between;
+    }
 }
