--- a/src/styles/globals.module.css
+++ b/src/styles/globals.module.css
@@ -1,10 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');
-* {
+
+.all{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-}
-
-html{
     font-family: "Roboto", sans-serif;
+    max-width: 1920px;
+    color: white;
+    background-color: black;
 }
