--- a/src/styles/home.module.css
+++ b/src/styles/home.module.css
@@ -10,7 +10,8 @@ body{
 .container{
     background-color: #0f0f0f;
     width: 100%;
-    height: 100vh;
+    height: calc(100vh - 80px);
+    overflow: hidden;
     display: flex;
     justify-content: center;
     align-items: center;
